# linux_serial_port

./: .gitignore  CMakeLists.txt  README.md
cmake/: cxx-common-opts.cmake
include/serial_port/: iserial_port.h  serial_port_linux_api.h
src/: CMakeLists.txt  serial_port_linux_api.cpp
test/: CMakeLists.txt  serial_port_linux_api_test.cpp
